profile page image stretch fix

--- a/assets/scss/home_style.scss
+++ b/assets/scss/home_style.scss
@@ -87,7 +87,8 @@ body{
                 height: 120px;
                 #post-form-left{
                     display: flex;
-                    width: 95px;
+                    width: 35%;
+                    min-width: 72px;
                     max-width: 105px;
                     align-items: center;
                     justify-items: center;
@@ -251,7 +252,7 @@ body{
         color: #dcd8d8;
         font-size: 20px;
         height: 4vw;
-        width: 35vw;
+        width: 95%;
         resize: none;
         ::placeholder{
             color: black;
